# IcedMangoes

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  schema.prisma  tailwind.config.js
config/: schema.py  settings.py  urls.py  wsgi.py
documentation/: ART_PROTECTION.md  ATOMIC_DESIGN.md  README.md  admin-guide.md  api-add-artwork.md  api-reference.md  architecture-remediation-plan.md  architecture.md  business-page.md  deploy-render.md  frontend-vercel-supabase.md  getting-started.md  installation-and-deployment.md  legal-templates-overview.md  stripe-setup.md  tech-django.md  tech-graphql.md  tech-prisma.md  tech-tailwind.md  using-the-storefront.md
documentation/legal-templates/: cookie-policy-template.md  privacy-policy-template.md  terms-template.md
frontend/: COMPONENTS.md  README.md  next.config.ts  package-lock.json  package.json
frontend/docs/: SUPABASE_SCHEMA.md
frontend/src/app/: globals.css  layout.tsx  page.tsx
store/: admin.py  apps.py  cart.py  context_processors.py  forms.py  fulfillment_service.py  models.py  order_service.py  prisma_client.py  services.py  storage_backends.py  substack.py  urls.py  views.py  webhooks.py
store/migrations/: 0001_initial.py  0002_add_tags.py  0003_orders_and_settings.py  0004_add_stripe_to_site_settings.py  0005_fulfillment_settings.py  0006_order_status_fulfillment.py  0007_artwork_product.py  0008_artworkimage.py  0009_substack_publication_url.py  __init__.py
(+68 files in other folders)
