[project]
name = "iced-mangoes"
version = "0.1.0"
description = "Backend architecture showcase: Django, MongoDB, service layer."
requires-python = ">=3.11"
dependencies = []

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.isort]
known-first-party = ["config", "store"]
